# firecracker-python

./: .gitignore  AGENTS.md  Dockerfile.test  FIRECRACKER_SETUP.md  Makefile  QUICKSTART.md  README.md  cleanup_firecracker.py  docker-compose.test.yml  pyproject.toml  setup.py  verify-setup.py
.github/workflows/: pypi-release.yml
assets/rootfs/: setup-firecracker-official.sh
docs/: README.md  cleanup.md  testing-in-docker.md
examples/: create_vm_with_filesystem_format.py  sample.py
firecracker/: _version.py  api.py  config.py  microvm.py  network.py  process.py  utils.py  vmm.py
scripts/: cleanup_resources.py  run-tests-docker.sh
tests/: README.md  conftest.py  test_api_client.py  test_cleanup.py  test_docker_integration.py  test_error_handling.py  test_logger.py  test_microvm.py  test_microvm_error_paths.py  test_microvm_initialization.py  test_network_error_paths.py  test_networking.py  test_port_forward.py  test_process_manager.py  test_rootfs_format.py  test_scripts.py  test_snapshots.py  test_utils.py  test_vm_configuration.py  test_vmm_manager.py
