[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm[toml]>=7.0"]
build-backend = "setuptools.build_meta"

[project]
name = "firecracker-python"
dynamic = ["version"]
description = "A Python client library to interact with Firecracker microVMs"
authors = [
    {name = "Muhammad Yuga Nugraha"}
]
requires-python = ">=3.9"
dependencies = [
"docker==7.1.0",
    "pyroute2==0.8.1",
    "paramiko==3.5.1",
    "faker==37.9.0",
]
license = {file = "LICENSE"}
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[project.scripts]
firecracker-check = "firecracker.scripts:check_firecracker_binary"

[tool.setuptools_scm]
write_to = "firecracker/_version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.coverage.run]
omit = [
    "/usr/lib/python3/dist-packages/nftables/*",
    "firecracker/_version.py",
    "tests/conftest.py",
    "tests/test_microvm.py"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers --maxfail=1000"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')"
]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
